--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,25 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+  <header class="header">
+    <h1>Danika Chrunik</h1>
+    <h2>UX Designer</h2>
+    <div class="tagline">
+      <h3>Learn More About Me</h3>
+      <p>jdkfjakljfdkajdfkajsdkjkdjfas;</p>
+    </div>
+    <div class="skills">
+      <h3>My Skills</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Contact Me</h3>
+      <a href="https://www.google.ca" target="-_blank">google</a>
+    </div>
+  </header>
 </body>
 </html>
