--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="skills">
       <h3>My Skills</h3>
+      <p>adfajfajfdklafj;kafj</p>
       <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -24,7 +25,7 @@
     </div>
     <div class="contact">
       <h3>Contact Me</h3>
-      <a href="https://www.google.ca" target="-_blank">google</a>
+      <p>Just <a href="https://www.google.ca" target="-_blank">google</a> it</p>
     </div>
   </header>
 </body>
